--- a/u-boot-rt/configs/rtd1296_sd_bananapi_defconfig
+++ b/u-boot-rt/configs/rtd1296_sd_bananapi_defconfig
@@ -6,7 +6,7 @@ CONFIG_SYS_MALLOC_CLEAR_ON_INIT=y
 CONFIG_RTK_XEN_MONITOR_SUPPORT=y
 CONFIG_RTK_SLAVE_CPU_BOOT=y
 CONFIG_SYS_CONFIG_NAME="rtd1296_qa_sd_bananapi"
-CONFIG_RTK_MMC_DRIVER=y
+#CONFIG_RTK_MMC_DRIVER=y
 CONFIG_RTK_SD_DRIVER=y
 #
 # Enabled commands
