linux-rt: debug dptx

--- a/linux-rt/arch/arm64/configs/rtd129x_bpi_defconfig
+++ b/linux-rt/arch/arm64/configs/rtd129x_bpi_defconfig
@@ -2954,13 +2954,13 @@ CONFIG_VIDEO_EM28XX_RC=m
 # CONFIG_V4L_TEST_DRIVERS is not set
 # CONFIG_DVB_PLATFORM_DRIVERS is not set
 CONFIG_RTK_HDMITX=y
-CONFIG_RTK_HDCP_1x=y
+# CONFIG_RTK_HDCP_1x is not set
 # CONFIG_RTK_HDCP_1x_TEE is not set
 # CONFIG_RTK_HDMIRX is not set
 # CONFIG_RTK_HDCP1x_REPEATER is not set
 # CONFIG_RTK_HDCPRX_1P4_TEE is not set
 # CONFIG_RTK_HDCPRX_2P2 is not set
-# CONFIG_RTK_DPTX is not set
+CONFIG_RTK_DPTX=y
 
 #
 # Supported MMC/SDIO adapters
