remove linux-kernel symlink and fix compile issue

--- a/phoenix/system/src/drivers/wifi/Makefile
+++ b/phoenix/system/src/drivers/wifi/Makefile
@@ -3,7 +3,7 @@ ifndef TOP
 endif
 
 include $(TOP)/make.include
-include $(TOP)/../../../linux-kernel/.config
+include $(TOP)/../../../linux-rt/.config
 
 ifneq ($(CONFIG_PCI),)
 	PCIDIRS=$(shell ls -d *e/|cut -f1 -d'/')
