--- a/linux-rtk/arch/arm64/boot/dts/realtek/rtd129x/rtd-1296.dtsi
+++ b/linux-rtk/arch/arm64/boot/dts/realtek/rtd129x/rtd-1296.dtsi
@@ -135,10 +135,6 @@
 			<&uart0_pins>,
 			<&uart1_pins>,
 			<&uart2_pins_0>,
-			<&i2c_pins_0>,
-			<&i2c_pins_1>,
-			<&i2c_pins_5>,
-			<&i2c_pins_6>,
 			<&pcie1_clk_pins>,
 			<&pcie2_clk_pins>,
 			<&rgmii0_pins>,
@@ -719,9 +715,12 @@
 		interrupts = <1 8>;
 		i2c-num = <0>;
 		status = "okay";
+		pinctrl-names = "default";
+		pinctrl-0 = <&i2c_pins_0>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 		clocks = <&iclk_en CLK_EN_I2C0>;
+		resets = <&irst IRSTN_I2C_0>;
 	};
 
 	i2c_1: i2c@0x98007C00 {
@@ -731,9 +730,12 @@
 		interrupts = <1 11>;
 		i2c-num = <1>;
 		status = "okay";
+		pinctrl-names = "default";
+		pinctrl-0 = <&i2c_pins_1>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 		clocks = <&iclk_en CLK_EN_I2C1>;
+		resets = <&irst IRSTN_I2C_1>;
 	};
 
 	i2c_2: i2c@0x9801B700 {
@@ -743,9 +745,12 @@
 		interrupts = <0 26>;
 		i2c-num = <2>;
 		status = "okay";
+		pinctrl-names = "default";
+		pinctrl-0 = <&i2c_pins_2>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 		clocks = <&clk_en_2 CLK_EN_MISC_I2C_2>;
+		resets = <&rst2 RSTN_I2C_2>;
 	};
 
 	i2c_3: i2c@0x9801B900 {
@@ -755,9 +760,12 @@
 		interrupts = <0 23>;
 		i2c-num = <3>;
 		status = "okay";
+		pinctrl-names = "default";
+		pinctrl-0 = <&i2c_pins_3>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 		clocks = <&clk_en_2 CLK_EN_MISC_I2C_3>;
+		resets = <&rst2 RSTN_I2C_3>;
 	};
 
 	i2c_4: i2c@0x9801BA00 {
@@ -767,11 +775,12 @@
 		interrupts = <0 15>;
 		i2c-num = <4>;
 		status = "okay";
+		pinctrl-names = "default";
+		pinctrl-0 = <&i2c_pins_4>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 		clocks = <&clk_en_2 CLK_EN_MISC_I2C_4>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&i2c_pins_4>;		
+		resets = <&rst2 RSTN_I2C_4>;
 	};
 
 	i2c_5: i2c@0x9801BB00 {
@@ -781,12 +790,16 @@
 		interrupts = <0 14>;
 		i2c-num = <5>;
 		status = "okay";
+		pinctrl-names = "default";
+		pinctrl-0 = <&i2c_pins_5>;
 		#address-cells = <1>;
 		#size-cells = <0>;
 		clocks = <&clk_en_2 CLK_EN_MISC_I2C_5>;
-
+		resets = <&rst2 RSTN_I2C_5>;
+		
 		rts5400@6A {
 			compatible = "rtk-rts5400";
+			status = "disabled";
 			reg = <0x6A>;
 			realtek,12v-power-gpio = <&rtk_misc_gpio 16 1 0>; /*1296 u3host power, output, default low */
 		};
