kernel: fix otg power issue

--- a/linux-rtk/arch/arm64/boot/dts/realtek/rtd129x/rtd-1296-bananapi-common.dtsi
+++ b/linux-rtk/arch/arm64/boot/dts/realtek/rtd129x/rtd-1296-bananapi-common.dtsi
@@ -365,7 +365,7 @@
 
 		/* port0 type-c */
 		gpio0 {
-			realtek,power-gpio;
+			realtek,power-gpio = <&rtk_iso_gpio 1 1 0>;
 		};
 		/* port1 */
 		gpio1 {
