kernel: support gpio fan

--- a/linux-rtk/arch/arm64/boot/dts/realtek/rtd129x/rtd-1296-bananapi-common.dtsi
+++ b/linux-rtk/arch/arm64/boot/dts/realtek/rtd129x/rtd-1296-bananapi-common.dtsi
@@ -436,5 +436,13 @@
 			linux,code = <116>;
 		};
 	};
+
+	fan0: gpio-fan@0 {
+		compatible = "gpio-fan";
+		gpios = <&rtk_misc_gpio 15 1 1>;
+		gpio-fan,speed-map = <0 0 3000 1>;
+		#cooling-cells = <2>;
+		status = "disabled";
+	};
 };
 
