kernel: support lsadc

--- a/linux-rtk/arch/arm64/boot/dts/realtek/rtd129x/rtd-129x-common.dtsi
+++ b/linux-rtk/arch/arm64/boot/dts/realtek/rtd129x/rtd-129x-common.dtsi
@@ -252,6 +252,7 @@
 
 	clk_en_3: clk-en@98000450 {
 		compatible = "realtek,clock-gate-controller";
+		status = "disabled"; /* bpi, disable for lsadc */
 		reg = <0x98000450 0x4>;
 		#clock-cells = <1>;
 		clock-output-names =
