uboot: update bootcommand flow for sd boot

--- a/u-boot-rtk/configs/rtd1296_sd_bananapi_defconfig
+++ b/u-boot-rtk/configs/rtd1296_sd_bananapi_defconfig
@@ -2,11 +2,11 @@ CONFIG_ARM=y
 CONFIG_TARGET_RTD1296=y
 CONFIG_TARGET_RTD1295=y
 CONFIG_BOARD_QA=y
+CONFIG_NAS_ENABLE=y
 CONFIG_SYS_MALLOC_CLEAR_ON_INIT=y
 CONFIG_RTK_XEN_MONITOR_SUPPORT=y
 CONFIG_RTK_SLAVE_CPU_BOOT=y
 CONFIG_SYS_CONFIG_NAME="rtd1296_qa_sd_bananapi"
-#CONFIG_RTK_MMC_DRIVER=y
 CONFIG_RTK_SD_DRIVER=y
 #
 # Enabled commands
