--- a/linux-rtk/arch/arm64/configs/rtd129x_bpi_defconfig
+++ b/linux-rtk/arch/arm64/configs/rtd129x_bpi_defconfig
@@ -3322,7 +3322,7 @@ CONFIG_DRM_BRIDGE=y
 # CONFIG_DRM_I2C_ADV7511 is not set
 # CONFIG_DRM_ARCPGU is not set
 # CONFIG_DRM_HISI_KIRIN is not set
-CONFIG_DRM_RTK=m
+CONFIG_DRM_RTK=y
 # CONFIG_DRM_LEGACY is not set
 
 #
